--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
+    "gsap": "^3.10.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.50.0"
