--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sito-prova",
+  "name": "sito-prova-gatsby",
   "version": "1.0.0",
   "private": true,
   "description": "sito-prova",
