--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "dependencies": {
     "gatsby": "^4.12.1",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^4.12.1",
-    "gatsby-plugin-image": "^2.12.1",
+    "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-sass": "^5.12.1",
-    "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-source-contentful": "^7.11.0",
-    "gatsby-source-filesystem": "^4.12.1",
-    "gatsby-transformer-sharp": "^4.12.1",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
     "gsap": "^3.10.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
