--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-sass": "^5.12.1",
     "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-contentful": "^7.11.0",
     "gatsby-source-filesystem": "^4.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
