--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "gatsby": "^4.12.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^4.12.1",
-    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-image": "^2.15.0",
+    "gatsby-plugin-react-helmet": "^5.15.0",
     "gatsby-plugin-sass": "^5.12.1",
-    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-sharp": "^4.15.0",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-contentful": "^7.11.0",
-    "gatsby-source-filesystem": "^4.13.0",
-    "gatsby-transformer-sharp": "^4.13.0",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-transformer-sharp": "^4.15.0",
     "gsap": "^3.10.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.50.0"
   }
 }
