--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "ethers": "^5.7.0",
     "gatsby": "^4.12.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^4.12.1",
+    "gatsby-plugin-google-tagmanager": "^4.21.0",
     "gatsby-plugin-image": "^2.15.0",
     "gatsby-plugin-react-helmet": "^5.15.0",
     "gatsby-plugin-sass": "^5.12.1",
@@ -27,6 +29,7 @@
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
     "gsap": "^3.10.4",
+    "jazzicon": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
