--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.12.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^4.12.1",
+    "gatsby-plugin-google-gtag": "^4.21.0",
     "gatsby-plugin-google-tagmanager": "^4.21.0",
     "gatsby-plugin-image": "^2.15.0",
     "gatsby-plugin-react-helmet": "^5.15.0",
